full-moon/tests/cases/fail/tokenizer/unclosed-string-4/source.lua
"recover
local x = 1
